overflow iframe correction

--- a/src/stylesheet/main.styl
+++ b/src/stylesheet/main.styl
@@ -2,6 +2,7 @@ body
     background-color: #eaeaea
     margin 0
     font-family: 'Roboto Mono', monospace;
+    overflow: hidden
 
 canvas
     width: 100%
